// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UninstallModal component should be rendered correctly (app uninstallable) 1`] = `
<div
  className="sto-modal--uninstall"
>
  <Unknown
    closable={true}
    mobileFullscreen={true}
    overflowHidden={false}
    primaryType="regular"
    secondaryType="secondary"
    size="small"
    title="Uninstall this application"
  >
    <ModalContent>
      <div
        className="sto-modal-content"
      >
        <ReactMarkdownWrapper
          source="This application is bound to be removed from your Cozy cozytest.mock.cc. Are you sure to __remove this application definitively__?"
        />
        <div
          className="sto-modal-controls"
        >
          <button
            className="c-btn c-btn--secondary"
            role="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <DefaultButton
            icon="delete"
            label="Uninstall"
            onClick={[Function]}
            theme="danger"
          />
        </div>
      </div>
    </ModalContent>
  </Unknown>
</div>
`;

exports[`UninstallModal component should handle correctly error from props 1`] = `
<div
  className="sto-modal--uninstall"
>
  <Unknown
    closable={true}
    mobileFullscreen={true}
    overflowHidden={false}
    primaryType="regular"
    secondaryType="secondary"
    size="small"
    title="Uninstall this application"
  >
    <ModalContent>
      <div
        className="sto-modal-content"
      >
        <ReactMarkdownWrapper
          source="This application is bound to be removed from your Cozy cozytest.mock.cc. Are you sure to __remove this application definitively__?"
        />
        <p
          className="u-error"
        >
          Something went wrong when uninstalling this application. Reason: This is a test error
        </p>
        <div
          className="sto-modal-controls"
        >
          <button
            className="c-btn c-btn--secondary"
            role="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <DefaultButton
            icon="delete"
            label="Uninstall"
            onClick={[Function]}
            theme="danger"
          />
        </div>
      </div>
    </ModalContent>
  </Unknown>
</div>
`;
